--- a/exercicios/aula 13 - Copia/ex001.htm
+++ b/exercicios/aula 13 - Copia/ex001.htm
@@ -6,17 +6,17 @@
     <title>Verificador</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
-<body >
+<body>
     <header>
         <h1>Hora do Dia</h1>
     </header>
     <section>
         
         <div id="d1">
-            <h1 id="txt">Que Horas São?</h1>
+
         </div>
         <div id="d2">
-            <img src="imagens/fotomanha.jpg" alt="">
+            <p>Foto</p>
         </div>
     </section>
     <footer>
