--- a/exercicios/aula 13/ex001.htm
+++ b/exercicios/aula 13/ex001.htm
@@ -16,7 +16,7 @@
             <h1 id="txt">Que Horas São?</h1>
         </div>
         <div id="d2">
-            <img src="imagens/fotomanha.jpg" alt="">
+            <img id="imagem" src="fotomanha.jpg" alt="foto do dia">
         </div>
     </section>
     <footer>
