--- a/exercicios2/aula6/ex004.html
+++ b/exercicios2/aula6/ex004.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Another  One</title>
+    <style>
+        body {
+            background-color: cadetblue;
+            font: normal 20px arial;
+        }
+    </style>
 </head>
 <body>
     
 </body>
 <script>
-    var 
+    var nome = prompt('Digite seu nome:')
+    document.write(`Olá ${nome}, seu nome tem ${nome.length} letras.</br>`)
+    document.write(`Seu nome em letras maiusculas fica ${nome.toUpperCase()}.</br>`)
+    document.write(`E em letras minusculas fica ${nome.toLowerCase()}.`)
+
 </script>
 </html>
