--- a/exercicios2/aula09/ex005.html
+++ b/exercicios2/aula09/ex005.html
@@ -33,5 +33,6 @@
     window.document.write(p1.innerHTML)
     var caixa = document.getElementById('msg')
     caixa.style.background = 'blue' 
+    window.document.write(window.navigator.appName)
 </script>
 </html>
