--- a/exercicios2/aula10/ex006.html
+++ b/exercicios2/aula10/ex006.html
@@ -40,5 +40,7 @@
         area.innerText = 'Saiu'
         area.style.background = 'rgb(56, 182, 56)'
     }
+
+    /*Nesse script, criei uma const para conectar */
 </script>
 </html>
