ex13 finalizado e ex14 iniciado

--- a/exercicios2/aula13/index.html
+++ b/exercicios2/aula13/index.html
@@ -14,7 +14,7 @@
         <div id="tela">
             <h2 id="txt">Que horas são?</h2>
             <div id="timg">
-                <img src="images/fotomanha.jpg" alt="Imagem manha">
+                <img src="images/fotomanha.jpg" alt="Imagem manha" id="horario">
             </div>
         </div>
     </section>
