--- a/exercicios2/aula14/index.html
+++ b/exercicios2/aula14/index.html
@@ -27,7 +27,7 @@
             </p>
         </div>
         <div id="result">
-
+            Preencha os dados para ver o resultado!
         </div>
     </section>
     <footer>
