--- a/to_do_list/index.html
+++ b/to_do_list/index.html
@@ -70,7 +70,7 @@
                     <i class="fa-solid fa-xmark"></i>
                 </button>
             </div>
-            <div class="todo">
+            <div class="todo done">
                 <h3>Estudar JavaScript</h3>
                 <button class="finish-todo">
                     <i class="fa-solid fa-check"></i>
