--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -25,35 +25,23 @@
             <button class="clearall">CE</button>
             <button>C</button>
             <button>%</button>
-            <button class="operadores">
-                <img src="./assets/divide.svg" alt="Operador de divisão">
-            </button>
+            <button class="operadores">/</button>
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button class="operadores">
-                <img src="./assets/multiple.svg" alt="operador de multiplicação">
-            </button>
+            <button class="operadores">*</button>
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button class="operadores">
-                <img src="./assets/minus.svg" alt="opeador de subtração">
-            </button>
+            <button class="operadores">-</button>
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button class="operadores">
-                <img src="./assets/plus.svg" alt="Operador de adição">
-            </button>
-            <button>
-                <img src="./assets/plusminus.svg" alt="Operadores mais e menos">
-            </button>
+            <button class="operadores">+</button>
+            <button>P</button>
             <button>0</button>
-            <button>,</button>
-            <button class="total">
-                <img src="./assets/equal.svg" alt="Operador de igual">
-            </button>
+            <button>.</button>
+            <button class="total">=</button>
         </div>
     </div>
 </body>
