--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -15,10 +15,10 @@
 <body>
     <div id="calculator">
         <div id="display">
-            <div id="last-calc"> 1 + 1</div>
+            <div id="last-calc"> </div>
             <div id="result">
-                <span>=</span>
-                <span>2</span>
+               
+                
             </div>
         </div>
         <div id="keyboard">
