exs evnts listener

--- a/exercicios2/exs-algor/cfbexs/aula31/index.html
+++ b/exercicios2/exs-algor/cfbexs/aula31/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="container">
+    <div class="container" id="cont1">
         <div id="c1" class="ling">HTML</div>
         <div id="c2" class="ling">CSS</div>
         <div id="c3" class="ling">JavaScript</div>
@@ -18,6 +18,10 @@
         <div id="c8" class="ling">C</div>
         <div id="c9" class="ling">C+</div>
         <div id="c0" class="ling">Python</div>
+    </div>
+    <button id="copia"> - Transferir -</button>
+    <div class="container" id="cont2">
+       
     </div>
 </body>
 <script src="script.js"></script>
